# mcp-personal

./: .gitignore  README.md  checks.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
mcp_personal/: __main__.py
mcp_personal/clients/: chat_history.py  mcp.py
mcp_personal/clients/model/: anthropic.py  base.py
mcp_personal/servers/: maths.py
mcp_personal/utils/: chat.py  request_test.py
mcp_personal/web_api/: api.py  app.py  main.py
