[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-personal"
version = "0.0.1"
description = "Personal MCP client"
authors = [
  {name = "Ravinda Gunaratne", email = "ravindag@hotmail.com"},
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = "~=3.12"
dependencies = [
  "requests==2.31.0",
  "langchain==0.3.25",
  "langchain-community==0.3.24",
  "langchain-anthropic==0.3.13",
  "mcp==1.9.0",
  "uv==0.7.6",
  "quart==0.20.0",
  "quart-cors==0.8.0",
]

[project.optional-dependencies]
testing = [
    "flake8==7.1.1",
    "pylint==3.3.3",
    "mypy==1.13.0",
    "black==24.10.0",
    "pydoclint==0.6.0",
    "pyenchant==3.2.2",
    "semgrep==1.103.0",
    "pytest==8.3.5",
    "types-requests==2.32.0.20250301",
    "types-waitress==3.0.1.20241117"
]
